<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/don_t_have_an_account"
        android:textColor="#78909C"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/btn_remember"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="1"
        android:text="@string/check_box_remember_me"
        android:textAllCaps="false"
        android:textColor="#78909C"
        android:textSize="14sp"
        app:backgroundTint="@color/khunglogin2"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_forgot"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot"
        android:textAllCaps="false"
        android:textColor="#448aff"
        android:textSize="13sp"
        app:backgroundTint="@color/khunglogin2"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/edt_password"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/edittext_border"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:foregroundTint="#fff"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColorHint="#37474F"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_user"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"

        android:background="@drawable/edittext_border"
        android:drawableStart="@drawable/username_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:foregroundTint="#fff"
        android:hint="@string/login_username"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColorHint="#37474F"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="gmail" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="325dp"
        android:layout_height="325dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/login_smart_home"
        android:importantForAccessibility="no" />


    <TextView
        android:id="@+id/textViewPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/poppins"
        android:text="@string/tv_login"
        android:textColor="#e040fb"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553"
 />

    <Button
        android:id="@+id/btn_signin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="#448aff"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>