<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="#F7F7F7">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/back2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        android:importantForAccessibility="no" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_sign_in"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/edt_password"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/edittext_border"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:foregroundTint="#fff"
        android:hint="@string/edt_login_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColorHint="#37474F"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_userGmail"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_border"
        android:drawableStart="@drawable/username_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:foregroundTint="#fff"
        android:hint="@string/edt_sign_gmail"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColorHint="#37474F"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_userName"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_border"
        android:drawableStart="@drawable/id_card"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:foregroundTint="#fff"
        android:hint="@string/edt_hint_name"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColorHint="#37474F"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_userNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_userNum"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_border"
        android:drawableStart="@drawable/add_contact"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:foregroundTint="#fff"
        android:hint="@string/edt_hint_num"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColorHint="#37474F"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_userGmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="325dp"
        android:layout_height="325dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_smart_home"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/textViewPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/poppins"
        android:text="@string/edt_hint_signin"
        android:textColor="#e040fb"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>