<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:minHeight="220dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp">

    <!-- Các thành phần trong CardView -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal"
            app:layout_constraintVertical_bias="0.005"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewItem_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/poppins"
                android:paddingStart="7dp"
                android:paddingEnd="13dp"
                android:text="@string/elementNameDefaul"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewItem_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/poppins"
                android:paddingStart="7dp"
                android:paddingEnd="13dp"
                android:visibility="gone"
                android:text="@string/elementNameDefaul"
                android:textColor="#000"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageViewItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter"
                android:src="@drawable/temperature"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
        <ImageView
            android:id="@+id/imageViewItem"
            android:layout_width="match_parent"
            android:src="@drawable/fan"
            android:layout_height="90dp"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutThresh"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewItem_value"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:padding="8dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/editTextItem"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- EditText -->
        <EditText
            android:id="@+id/editTextItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:padding="8dp"
            android:inputType="number"
            android:visibility="gone"
            android:hint="@string/set_threshold_defaul"
            android:textColor="#000"
            android:textSize="14sp"
            android:background="@drawable/edittext_background"
            android:autofillHints="number"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutThresh"
            app:layout_constraintTop_toBottomOf="@+id/textViewItem_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayoutThresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/ButtonSetting"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextItem">

            <ImageView
                android:id="@+id/imageViewThresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:importantForAccessibility="no"
                android:scaleType="fitEnd"
                android:src="@drawable/hightemperature" />

            <TextView
                android:id="@+id/textViewItem_Thresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/string_set_threshold"
                android:textColor="#000"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/imageBtnSync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:importantForAccessibility="no"
                android:scaleType="fitStart"
                android:src="@drawable/sync" />
        </LinearLayout>

        <ToggleButton
            android:textOff="@string/string_btn_off"
            android:textOn="@string/string_btn_on"
            android:id="@+id/toggleButtonItem"
            android:layout_width="80dp"
            android:visibility="gone"
            android:layout_marginTop="46dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:text="@string/string_btn_set"
            android:id="@+id/ButtonSetting"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutThresh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>